- - -

# 2012-01-04

## About View
* Added shadow and font changes to about text

## Doctors View
* Added 6 doctors

## Messages Vie
* Number of messages in segmented control is now dynamic based on the actual number of messages

## Timeline
* Added current SIMILE timeline

- - -

# 2011-12-27

* Added privacy education and warning screen which shows on first launch. The user is asked to lock their iPad to check if the passcode is enabled and then tells the user if it is or not.

- - -

# 2011-12-20

* Research on passcode verification

## Messages View
* Added dynamic content, still waiting on mock data to fill real messages in

## Doctors View
* Added hospital when selected fades in a doctor detail view

- - -

# 2011-12-14

* Added TestFlight checkpoints to check usage

## Summary View
* Added variable DOB, phone number, place of birth, race, ethicity
* Added fade out/fade in of info when switching users
* Fixed issue when trying to swipe when at first or last patient

- - -

# 2011-12-05

* Added the TestFlight SDK to help gather feedback and statistics

## Summary View
* Added variable age, address, and gender

## C32 View
* Added button to lower right to show HTML version of C32 modally 

## About View
* Added version
* Added feedback form

- - -

# 2011-12-05

* Fixed issue which slowed down device orientation issues
* Patient swipe view now updates users photo when swiped from another patient swipe view

## Timeline View
* Changed timeline to use HTML provided by Jeff
* Added patient swipe view

## Messages View
* Added patient swipe view

## Doctor View
* Change name for Dr. Finger
* Added patient swipe view

- - -

# 2011-12-05

## Patient Summary View
* Created a reusable patient swipe view with a page control. You can now swipe the users image or tap the dots to change a user. Currently this only works on the summary view. It also changes the users name.

- - -

# 2011-12-05

## Patient Summary View
* Finished up static content for patient summary